overflow fix

--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -167,7 +167,6 @@ body {
 
 .card-deck, .card {
   min-width: 275px;
-  overflow: auto;
 }
 
 .dash-row {
